# histo_com

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: PLAN.md
skills/histo-com/: SKILL.md
src/histo_com/: __init__.py  cli.py  core.py  selectors.py
tests/: test_cli.py  test_core.py  test_selectors.py
