[project]
name = "histo-com"
version = "0.1.0"
description = "Compute the centre of mass of 3D biological structures (PDB/mmCIF), by whole structure, chain/domain, or residue."
readme = "README.md"
authors = [
    { name = "Chris Thorpe", email = "33100149+drchristhorpe@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "click>=8.1",
]

[project.scripts]
histo-com = "histo_com.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
